--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Handlebars plugin for gulp",
   "main": "index.js",
   "dependencies": {
-    "through": "~2.3.0",
-    "handlebars": "~1.1.2",
-    "gulp-util": "~2.2.0"
+    "through": ">= 2.3.0",
+    "handlebars": "*",
+    "gulp-util": ">= 2.2.0"
   },
   "devDependencies": {
     "should": "~2.1.1",
